--- a/styles/common.css
+++ b/styles/common.css
@@ -1,27 +1,92 @@
+body, html {}
+header, footer > * {
+    max-width: calc(100% - 180px);
+    min-width: 320px;
+    margin: 0 auto;
+}
 /* 위로가기 버튼 */
-#popup {}
+#popup {
+    width: 45px; height: 45px;
+    position: fixed;
+    bottom: 70px; right: 70px;
+}
 #popup a {}
-#popup a img {}
+#popup a img {width: 100%;}
 /* header */
-header {}
-header .left {}
-header .left h1 {}
+header {
+    background-color: pink;
+    padding: 30px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+header .left {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+header .left h1 {
+    background-color: blueviolet;
+    width: 170px; height: 51px;
+    margin-right: 50px;
+}
 header .left h1 a {}
-header .left h1 a img {}
+header .left h1 a img {width: 100%;}
 header .left nav {}
-header .left nav > ul {}
-header .left nav > ul > li {}
-header .left nav > ul > li > a {}
-header .left nav > ul > li > .sub {}
-header .left nav > ul > li > .sub > li {}
-header .left nav > ul > li > .sub > li > a {}
+header .left nav > ul {
+    text-align: center;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-start;
+}
+header .left nav > ul > li {
+    background-color: aqua;
+    margin-right: 30px;
+}
+header .left nav > ul > li:last-child {margin-right: 0;}
+header .left nav > ul > li > a {
+    font-size: 1.777rem;
+    font-weight: 700;
+    color: #fff;
+}
+header .left nav > ul > li > .sub {
+    background-color: aquamarine;
+    padding: 20px 0;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-start;
+}
+header .left nav > ul > li:last-child .sub{
+    flex-flow: column nowrap;
+}
+header .left nav > ul > li > .sub > li {
+    width: 180px;
+    height: 100%;
+}
+header .left nav > ul > li > .sub > li > a,
+header .left nav > ul > li > .sub > li > .sub2 li {margin-bottom: 15px;}
+header .left nav > ul > li > .sub > li > a {
+    display: block;
+    font-weight: 700;
+}
 header .left nav > ul > li > .sub > li > .sub2 {}
-header .left nav > ul > li > .sub > li > .sub2 li {}
+header .left nav > ul > li > .sub > li > .sub2 li {
+    background-color: beige;
+}
 header .left nav > ul > li > .sub > li > .sub2 li a {}
-header .lnb {}
+header .left nav > ul > li > .sub > li > .sub2 li a:last-child {margin-bottom: 0;}
+header .lnb {
+    display: flex;
+    align-items: center;
+}
 header .lnb .search_wrap {}
+header .lnb .search_wrap > button, 
+header .lnb a:nth-child(2) {
+    margin-right: 20px;
+    width: 23px; height: 23px;
+}
 header .lnb .search_wrap > button {}
-header .lnb .search_wrap > button img {}
+header .lnb .search_wrap > button img {width: 100%;}
 header .lnb .search_wrap .open_search {}
 header .lnb .search_wrap .open_search #search_close {}
 header .lnb .search_wrap .open_search #search_close img {}
@@ -32,20 +97,55 @@ header .lnb .search_wrap .open_search form fieldset #search {}
 header .lnb .search_wrap .open_search form fieldset #search_btn {}
 header .lnb .search_wrap .open_search form fieldset #search_btn img {}
 header .lnb a {}
-header .lnb a:last-child {}
-header .lnb a img {}
+header .lnb a:last-child {width: 25px; height: 25px;}
+header .lnb a img {width: 100%;}
 /* footer */
-footer {}
-footer .fnb_t {}
-footer .fnb_t a {}
-footer .fnb_mid {}
+footer {
+    background: #f3f3f3;
+    padding: 70px auto;
+}
+footer .fnb_t {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #aaa;
+}
+footer .fnb_t a {
+    letter-spacing: -0.02em;
+    font-weight: 500;
+    margin-right: 30px;
+}
+footer .fnb_t a:nth-child(3) {color: #aaa;}
+footer .fnb_t a:last-child {margin-right: 0;}
+footer .fnb_mid {
+    background-color: lightcoral;
+    display: flex;
+    justify-content: space-between;
+    margin: 20px auto;
+}
 footer .fnb_mid .left {}
 footer .fnb_mid .left p {}
-footer .fnb_mid .left p a {}
+footer .fnb_mid .left p a {
+    font-size: 28px;
+    font-weight: 500;
+    display: block;
+    margin-bottom: 5px;
+}
 footer .fnb_mid .right {}
-footer .fnb_mid .right > img {}
+footer .fnb_mid .right > img {
+    width: 148px; height: 30px;
+    margin-right: 10px;
+}
 footer .fnb_mid .right a {}
-footer .fnb_mid .right a img {}
-footer .fnb_btm {}
-footer .fnb_btm p {}
+footer .fnb_mid .right a img {width: 30px; height: 30px;}
+footer .fnb_btm {
+    background-color: aquamarine;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+footer .fnb_btm p,footer .fnb_btm p a {
+    font-size: 0.75rem;
+    line-height: 16px;
+}
+footer .fnb_btm p:first-child {}
 footer .fnb_btm p a {}
