--- a/styles/index.css
+++ b/styles/index.css
@@ -1,101 +1,432 @@
 body, html {}
-.siwper_wrap, .new_menu {
-    max-width: calc(100% - 180px);
+.swiper_wrap, .new_menu {
+    max-width: 1080px;
     min-width: 320px;
     margin: 0 auto;
 }
+.swiper_wrap, .new_menu {padding: 70px 0;}
 /* main */
 main {}
 /* main_slide */
 #main_slide {}
 #main_slide .swiper-wrapper {}
-#main_slide .swiper-wrapper .swiper-slide {}
-#main_slide .swiper-wrapper .slide1 {}
-#main_slide .swiper-wrapper .slide2 {}
-#main_slide .swiper-wrapper .slide3 {}
-#main_slide .swiper-wrapper .slide4 {}
-#main_slide .swiper-wrapper .swiper-slide .slide_txt {}
-#main_slide .swiper-wrapper .swiper-slide .slide_txt em {}
-#main_slide .swiper-wrapper .swiper-slide .slide_txt span {}
-#main_slide .swiper-wrapper .swiper-slide .slide_txt a {}
+#main_slide .swiper-wrapper .swiper-slide {
+    height: 650px;
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#main_slide .swiper-wrapper .slide1 {
+    background-image: url(../images/main_bnr1_bg.jpg);
+}
+#main_slide .swiper-wrapper .slide2 {
+    background-image: url(../images/main_bnr2_bg.jpg);
+}
+
+#main_slide .swiper-wrapper .swiper-slide .container {}
+#main_slide .swiper-wrapper .swiper-slide .container .imgCls {
+    width: 712px; height: 560px;
+    position: absolute;
+    top: 57px; right: 108px;
+}
+#main_slide .swiper-wrapper .swiper-slide .container .imgCls img {width: 100%;}
+#main_slide .swiper-wrapper .swiper-slide .container .slide_txt {
+    position: absolute;
+    left: 100px; bottom: 80px;
+    display: flex;
+    flex-flow: column nowrap;
+    margin-left: 92px;
+}
+#main_slide .swiper-wrapper .swiper-slide .slide_txt img{width: 622px;}
+#main_slide .swiper-wrapper .swiper-slide .slide_txt a {
+    margin-top: 30px;
+    padding: 15px 35px;
+    border-radius: 50px;
+    color: #fff;
+    font-size: 1.333rem;
+    font-weight: 700;
+    letter-spacing: -0.02rem;
+}
+#main_slide .swiper-wrapper .slide1 .slide_txt a {
+    background: #E30F00;
+    width: 211px;
+}
+#main_slide .swiper-wrapper .slide2 .slide_txt a {
+    background: #B3D8DF;
+    width: 192px;
+}
+.swiper-pagination {}
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 /* category-slide title 통합태그 */
-.siwper_wrap {}
-.siwper_wrap .title {}
-.siwper_wrap .title h2 {}
-.siwper_wrap .title a {}
-.siwper_wrap .title a span {}
-.siwper_wrap .title a span img {}
+.swiper_wrap {}
+.swiper_wrap .title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.swiper_wrap .title h2,
+.offline .title h2 span:first-child {
+    font-size: 1.777rem;
+    font-weight: 700;
+}
+.swiper_wrap .title a {
+    display: flex;
+    align-items: center;
+    border: 1px solid #aaa;
+    border-radius: 30px;
+    padding: 7px 15px;
+}
+.swiper_wrap .title a span {
+    color: #aaa;
+    margin-right: 5px;
+}
+.swiper_wrap .title a span img {width: 12px;}
+/* product 통합태그 */
+.best #best_slide .swiper-wrapper .swiper-slide .box,
+.new_menu .tab_contents > div .item_wrap div .box {
+    margin-bottom: 15px;
+    position: relative;
+}
+.best #best_slide .swiper-wrapper .swiper-slide .box .item_img img,
+.new_menu .tab_contents > div .item_wrap div .box .item_img img {
+    width: 100%;
+    display: block;
+}
+.best #best_slide .swiper-wrapper .swiper-slide .box .like_img,
+.new_menu .tab_contents > div .item_wrap div .box .like_img {
+    width: 25px; height: 25px;
+    position: absolute;
+    top: 10px; right: 10px;
+}
+.best #best_slide .swiper-wrapper .swiper-slide .box .like_img img,
+.new_menu .tab_contents > div .item_wrap div .box .like_img img {width: 100%;}
+.best #best_slide .swiper-wrapper .swiper-slide .txt .name,
+.best #best_slide .swiper-wrapper .swiper-slide .txt .price,
+.new_menu .tab_contents > div .item_wrap div .txt .name,
+.new_menu .tab_contents > div .item_wrap div .txt .price {letter-spacing: -0.02em;}
+.best #best_slide .swiper-wrapper .swiper-slide .txt .name,
+.new_menu .tab_contents > div .item_wrap div .txt .name {
+    display: block;
+    margin-bottom: 5px;
+}
+.best #best_slide .swiper-wrapper .swiper-slide .txt .price,
+.new_menu .tab_contents > div .item_wrap div .txt .price {
+    display: block;
+    font-weight: 700;
+}
 /* category-slide */
 .category {}
 .category #category_slide {}
-.category #category_slide .swiper-wrapper {}
-.category #category_slide .swiper-wrapper .swiper-slide {}
-.category #category_slide .swiper-wrapper .slide1 {}
-.category #category_slide .swiper-wrapper .slide2 {}
-.category #category_slide .swiper-wrapper .slide3 {}
-.category #category_slide .swiper-wrapper .slide4 {}
-.category #category_slide .swiper-wrapper .slide5 {}
-.category #category_slide .swiper-wrapper .slide6 {}
-.category #category_slide .swiper-wrapper .slide7 {}
+.category #category_slide .swiper-wrapper {padding: 0 45px;}
+.category #category_slide .swiper-wrapper .swiper-slide {
+    width: 150px;
+    border-radius: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-right: 45px;
+    position: relative;
+    z-index: 50;
+    transition: all 0.5s linear;
+    /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+}
+.category #category_slide .swiper-wrapper .swiper-slide:hover::after {
+    content: '';
+    display: block;
+    width: 100%; height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    background-size: cover;
+    border-radius: 50%;
+    position: absolute;
+    left: 0; top: 0;
+    z-index: 100;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.category #category_slide .swiper-wrapper .swiper-slide img {width: 100%;}
+.category #category_slide .swiper-wrapper .swiper-slide span {
+    display: none;
+    transition: all 0.5s linear;
+    /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+}
+.category #category_slide .swiper-wrapper .swiper-slide:hover span {
+    display: block;
+    font-size: 1.333rem;
+    font-weight: 700;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    z-index: 200;
+    top: 45%; left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+}
 /* best-slide */
 .best {}
 .best #best_slide {}
-.best #best_slide .swiper-wrapper {}
+.best #best_slide .swiper-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
 .best #best_slide .swiper-wrapper .swiper-slide {}
-.best #best_slide .swiper-wrapper .swiper-slide .box {}
-.best #best_slide .swiper-wrapper .swiper-slide .box .item_img {}
+.best #best_slide .swiper-wrapper .swiper-slide .box {width: 250px;}
+.best #best_slide .swiper-wrapper .swiper-slide .box .item_img {
+    width: 250px; height: 250px;
+}
 .best #best_slide .swiper-wrapper .swiper-slide .box .item_img img {}
 .best #best_slide .swiper-wrapper .swiper-slide .box .like_img {}
 .best #best_slide .swiper-wrapper .swiper-slide .box .like_img img {}
 .best #best_slide .swiper-wrapper .swiper-slide .txt {}
 .best #best_slide .swiper-wrapper .swiper-slide .txt .name {}
 .best #best_slide .swiper-wrapper .swiper-slide .txt .price {}
+.best #best_slide .swiper-scrollbar {
+    margin-top: 30px;
+    background: rgba(243, 243, 243,0.8);
+    position: relative;
+    bottom: 0;
+}
+.best #best_slide .swiper-scrollbar-drag {background: #222;}
 /* new_menu */
 .new_menu {}
-.new_menu .tab_title {}
-.new_menu .tab_title a {}
-.new_menu .tab_title a.active {}
-.new_menu .tab_title span {}
+.new_menu .tab_title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.new_menu .tab_title a {font-size: 1.777rem;}
+.new_menu .tab_title a.active {font-weight: 700;}
+.new_menu .tab_title span {margin: 0 20px;}
 .new_menu .tab_contents {}
 .new_menu .tab_contents > div {}
-.new_menu .tab_contents > div .tab_bnr {}
-.new_menu .tab_contents > div .tab_bnr .txt {}
-.new_menu .tab_contents > div .tab_bnr .txt em {}
-.new_menu .tab_contents > div .tab_bnr .txt span {}
-.new_menu .tab_contents > div .tab_bnr .txt a {}
-.new_menu .tab_contents > div .tab_bnr .txt a span {}
-.new_menu .tab_contents > div .tab_bnr .txt a img {}
-.new_menu .tab_contents > div .item_wrap {}
-.new_menu .tab_contents > div .item_wrap a {}
-.new_menu .tab_contents > div .item_wrap a .box {}
-.new_menu .tab_contents > div .item_wrap a .box .item_img {}
-.new_menu .tab_contents > div .item_wrap a .box .item_img img {}
-.new_menu .tab_contents > div .item_wrap a .box .like_img {}
-.new_menu .tab_contents > div .item_wrap a .box .like_img img {}
-.new_menu .tab_contents > div .item_wrap a .txt {}
-.new_menu .tab_contents > div .item_wrap a .txt .name {}
-.new_menu .tab_contents > div .item_wrap a .txt .price {}
+.new_menu .tab_contents > div .tab_bnr {
+    background-size: cover;
+    width: 1080px;
+    height: 600px;
+    position: relative;
+}
+.new_menu .tab_contents .tab_c1 .tab_bnr {background-image: url(../images/tab1.jpg);}
+.new_menu .tab_contents .tab_c2 .tab_bnr {background-image: url(../images/tab2.jpg);}
+.new_menu .tab_contents > div .tab_bnr .txt {
+    display: flex;
+    flex-flow: column nowrap;
+    position: absolute;
+    top: 80px; left: 80px;
+    color: #fff;
+}
+.new_menu .tab_contents > div .tab_bnr .txt em {
+    font-size: 2.369rem;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.new_menu .tab_contents > div .tab_bnr .txt span {font-size: 1.333rem;}
+.new_menu .tab_contents > div .tab_bnr .txt a {
+    margin-top: 200px;
+    background: rgba(0,0,0,0.5);
+    border-radius: 30px;
+    padding: 15px 20px;
+    width: 189px;
+    display: flex;
+    align-items: center;
+}
+.new_menu .tab_contents > div .tab_bnr .txt a span {
+    color: #fff;
+    font-weight: 700;
+    margin-right: 10px;
+}
+.new_menu .tab_contents > div .tab_bnr .txt a img {
+    width: 15px; height: 15px;
+}
+.new_menu .tab_contents > div .item_wrap {
+    display: flex;
+    justify-content: space-around;
+    margin-top: -15%;
+}
+.new_menu .tab_contents > div .item_wrap div {}
+.new_menu .tab_contents > div .item_wrap div .box {
+    width: 300px;
+}
+.new_menu .tab_contents > div .item_wrap div .box .item_img {
+    display: block;
+    width: 300px; height: 300px;
+}
+.new_menu .tab_contents > div .item_wrap div .box .item_img img {
+    border-radius: 10px;
+    width: 100%;
+}
+.new_menu .tab_contents > div .item_wrap div .box .like_img {}
+.new_menu .tab_contents > div .item_wrap div .box .like_img img {}
+.new_menu .tab_contents > div .item_wrap div .txt {}
+.new_menu .tab_contents > div .item_wrap div .txt .name {}
+.new_menu .tab_contents > div .item_wrap div .txt .price {}
 /* ad_bnr */
-.ad_bnr {}
-.ad_bnr .txt {}
-.ad_bnr .txt p {}
+.ad_bnr {
+    background: url(../images/ad_bnr.jpg) no-repeat center;
+    background-size: cover;
+    height: 270px;
+}
+.ad_bnr a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.ad_bnr .txt {
+    width: 1080px;
+    margin: 0 auto;
+}
+.ad_bnr .txt p {
+    margin-bottom: 10px;
+}
+.ad_bnr .txt p:first-child {
+    font-size: 1.333rem;
+}
+.ad_bnr .txt p:last-child {
+    border-radius: 30px;
+    background: #E30F00;
+    color: #fff;
+    font-weight: 700;
+    text-align: center;
+    padding: 5px 0;
+    width: 70px;
+    margin-bottom: 0;
+}
+.ad_bnr .txt p span,
+.ad_bnr .txt p em {
+    font-size: 1.777rem;
+    font-weight: 700;
+}
 .ad_bnr .txt p span {}
-.ad_bnr .txt p span {}
-.ad_bnr .txt p em {}
+.ad_bnr .txt p em {color: #E30F00;}
 /* offline-slide */
 .offline {}
+.offline .title {}
+.offline .title h2 {}
+.offline .title h2 span:first-child {margin-bottom: 10px;}
+.offline .title h2 span {display: block;}
+.offline .title a {height: 33px;}
 .offline #shop_slide {}
 .offline #shop_slide .swiper-wrapper {}
-.offline #shop_slide .swiper-wrapper .swiper-slide {}
-.offline #shop_slide .swiper-wrapper .swiper-slide .slide_txt {}
-.offline #shop_slide .swiper-wrapper .swiper-slide .slide_txt em {}
-.offline #shop_slide .swiper-wrapper .swiper-slide .slide_txt span {}
+.offline #shop_slide .swiper-wrapper .swiper-slide {
+    display: block;
+    background-color: coral;
+    width: 300px; height: 300px;
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    box-shadow: 0 2px 3px #222;
+    margin: 5px 0;
+}
+.offline #shop_slide .swiper-wrapper .swiper-slide::after{
+    content: '';
+    display: block;
+    width: 100%; height: 100%;
+    border-radius: 10px;
+    background-color: rgba(0,0,0,0.5);
+    background-size: cover;
+    position: absolute;
+    left: 0; top: 0;
+    z-index: 100;
+}
+.offline #shop_slide .swiper-wrapper .slide1 {background-image: url(../images/offline1.jpg);}
+.offline #shop_slide .swiper-wrapper .slide2 {background-image: url(../images/offline2.jpg);}
+.offline #shop_slide .swiper-wrapper .slide3 {background-image: url(../images/offline3.jpg);}
+.offline #shop_slide .swiper-wrapper .slide4 {background-image: url(../images/offline4.jpg);}
+.offline #shop_slide .swiper-wrapper .slide5 {background-image: url(../images/offline5.jpg);}
+.offline #shop_slide .swiper-wrapper .slide6 {background-image: url(../images/offline6.jpg);}
+.offline #shop_slide .swiper-wrapper .swiper-slide .slide_txt {
+    opacity: 0;
+    transform: translateX(40%); 
+    transition: all 1s;
+    position: relative;
+    z-index: 300;
+    text-align: center;
+    width: 100%; height: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+.offline #shop_slide .swiper-wrapper .swiper-slide .slide_txt em,
+.offline #shop_slide .swiper-wrapper .swiper-slide .slide_txt span {
+    display: block;
+}
+.offline #shop_slide .swiper-wrapper .swiper-slide .slide_txt em {
+    font-size: 1.777rem;
+    font-weight: 700;
+    margin-bottom: 30px;
+    color: #fff;
+}
+.offline #shop_slide .swiper-wrapper .swiper-slide .slide_txt span {
+    line-height: 19px;
+    color: rgba(255,255,255,0.8);
+}
 /* alarm */
-.alarm {}
-.alarm p {}
-.alarm p span {}
-.alarm button {}
-.alarm button img {}
+.alarm {
+    background: url(../images/offline2.jpg) no-repeat center;
+    background-size: cover;
+    padding: 100px 0;
+    text-align: center;
+    position: relative;
+}
+.alarm::after {
+    content: '';
+    display: block;
+    width: 100%; height: 100%;
+    border-radius: 10px;
+    background-color: rgba(0,0,0,0.5);
+    background-size: cover;
+    position: absolute;
+    left: 0; top: 0;
+    z-index: 100;
+}
+.alarm .txt,
+.alarm .alarm_btn {
+    position: relative;
+    z-index: 200;
+}
+.alarm p,
+.alarm button span {color: #fff;}
+.alarm p:nth-child(3) {color: #B3D8DF;}
+.alarm p:first-child,
+.alarm p:nth-child(3) {margin-bottom: 50px;}
+.alarm p:first-child {
+    font-size: 1.777rem;
+    font-weight: 700;
+}
+.alarm p:nth-child(2) {margin-bottom: 15px;}
+.alarm p span {margin-right: 15px;}
+.alarm p span:last-child {margin-right: 0;}
+.alarm button,
+.alarm a {
+    border-radius: 5px;
+}
+.alarm .alarm_btn {
+    display: flex;
+    justify-content: center;
+}
+.alarm button {
+    background: rgba(179, 216, 223,0.7);
+    padding: 15px 100px;
+    display: flex;
+    align-items: center;
+    margin-right: 15px;
+}
+.alarm button img,
+.alarm a img {
+    width: 25px; height: 25px;
+}
+.alarm button img {
+    margin-right: 10px;
+}
 .alarm button span {}
-.alarm a {}
+.alarm a {
+    background: rgba(243, 243, 243,0.7);
+    display: inline-block;
+    padding: 15px;
+}
 .alarm a img {}
