--- a/styles/login.css
+++ b/styles/login.css
@@ -70,8 +70,17 @@ main .login .tab_contents .tab_c1 form fieldset .mid .fixed {
     display: flex;
     align-items: center;
 }
-main .login .tab_contents .tab_c1 form fieldset .mid .fixed label {cursor: pointer; margin-right: 20px;}
-main .login .tab_contents .tab_c1 form fieldset .mid .fixed label input {margin-right: 5px;}
+main .login .tab_contents .tab_c1 form fieldset .mid .fixed label {
+    cursor: pointer; 
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+}
+main .login .tab_contents .tab_c1 form fieldset .mid .fixed label input {
+    margin-right: 10px;
+    width: 15px; height: 15px;
+    border-radius: 5px;
+}
 main .login .tab_contents .tab_c1 form fieldset .mid .fixed label span {}
 main .login .tab_contents .tab_c1 form fieldset .mid a {
     display: flex;
@@ -116,7 +125,7 @@ main .login .tab_contents .tab_c1 .other a:nth-child(2) {background: #FFE102;}
 main .login .tab_contents .tab_c1 .other a:nth-child(3) {
     background: #fff;
     border: 1px solid #aaa;
-    
+    margin-bottom: 0;
 }
 main .login .tab_contents .tab_c1 .other a:nth-child(1):hover {
     filter: drop-shadow(0 0 3px rgba(3, 207, 93,0.7));
@@ -241,6 +250,7 @@ main .login .tab_contents .tab_c2 form fieldset p button {margin-bottom: 60px;}
 main .login .join {
     border-top: 1px solid #ccc;
     padding-top: 50px;
+    margin-top: 50px;
 }
 main .login .join > span {}
 main .login .join > a {
