--- a/styles/common.css
+++ b/styles/common.css
@@ -7,6 +7,7 @@ header, footer {
     width: 45px; height: 45px;
     position: fixed;
     bottom: 70px; right: 70px;
+    z-index: 900;
 }
 #popup a {}
 #popup a img {width: 100%;}
@@ -110,8 +111,12 @@ header .lnb a:last-child {width: 25px; height: 25px;}
 header .lnb a img {width: 100%;}
 /* footer */
 footer {
+    background: #f3f3f3;
+}
+footer .fnb_wrap {
     width: 1080px;
     padding: 70px 0;
+    margin: 0 auto;
 }
 footer .fnb_t {
     padding-bottom: 10px;
@@ -137,13 +142,24 @@ footer .fnb_mid .left p a {
     display: block;
     margin-bottom: 5px;
 }
-footer .fnb_mid .right {}
+footer .fnb_mid .right {
+    display: flex;
+    align-items: center;
+}
 footer .fnb_mid .right > img {
     width: 148px; height: 30px;
     margin-right: 10px;
 }
-footer .fnb_mid .right a {}
-footer .fnb_mid .right a img {width: 30px; height: 30px;}
+footer .fnb_mid .right a {
+    display: block;
+    width: 30px; height: 30px;
+    background: url(../images/icon/ico_instargram.png) no-repeat center;
+    text-indent: -9999px;
+    transition: all 0.3s linear;
+}
+footer .fnb_mid .right a:hover {
+    background: url(../images/icon/ico_instargram_fill.png) no-repeat center;
+}
 footer .fnb_btm {
     display: flex;
     flex-flow: row nowrap;
