--- a/styles/common.css
+++ b/styles/common.css
@@ -14,13 +14,16 @@ header, footer {
 /* header */
 header {
     width: 100%;
-    background-color: pink;
-    padding: 30px 360px;
+    position: fixed;
+    z-index: 500;
+}
+header .container {
+    width: 1080px;
+    margin: 0 auto;
+    padding: 15px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: fixed;
-    z-index: 500;
 }
 header .left {
     display: flex;
@@ -28,63 +31,87 @@ header .left {
     align-items: center;
 }
 header .left h1 {
-    background-color: blueviolet;
     width: 170px; height: 51px;
-    margin-right: 50px;
+    margin-right: 30px;
 }
 header .left h1 a {}
 header .left h1 a img {width: 100%;}
+header .left nav {}
 header .left nav .nav_bg {
     background: rgba(0,0,0,0.7);
     position: absolute;
     width: 100%;
     height: 240px;
     left: 0;
-    z-index: 100;
+    top: 81px;
+    z-index: 50;
 }
-header .left nav a {white-space: nowrap;}
-header .left nav > ul {
+header .left nav a {
+    white-space: nowrap;
+}
+header .left nav .gnb {
     text-align: center;
     display: flex;
     flex-flow: row nowrap;
     align-items: flex-start;
+    position: relative;
+    z-index: 500;
 }
-header .left nav > ul > li {
-    background-color: aqua;
-    margin-right: 30px;
+header .left nav .gnb > li {
+    width: 130px;
 }
-header .left nav > ul > li:last-child {margin-right: 0;}
-header .left nav > ul > li > a {
-    font-size: 1.777rem;
+header .left nav .gnb > li:last-child {margin-right: 0;}
+header .left nav .gnb > li > a {
+    font-size: 1.333rem;
     font-weight: 700;
     color: #fff;
 }
-header .left nav > ul > li > .sub {
-    background-color: aquamarine;
-    padding: 20px 0;
+/* header .left nav .gnb > li > .sub2{
+    padding: 25px 0;
+    display: flex;
+} */
+/* header .left nav .gnb > li > .sub2, */
+header .left nav .gnb > li > .sub {
     display: flex;
     flex-flow: row nowrap;
     align-items: flex-start;
+    position: absolute;
+    height: 240px;
+    top: 51px;
 }
-header .left nav > ul > li:last-child .sub{
+/* header .left nav .gnb > li:last-child .sub2, */
+header .left nav .gnb > li:last-child .sub {
     flex-flow: column nowrap;
 }
-header .left nav > ul > li > .sub > li {
-    width: 180px;
+header .left nav .gnb > li > .sub > li {
+    width: 130px;
     height: 100%;
+    padding: 25px 0;
 }
-header .left nav > ul > li > .sub > li > a,
-header .left nav > ul > li > .sub > li > .sub2 li {margin-bottom: 15px;}
-header .left nav > ul > li > .sub > li > a {
+/* header .left nav .gnb > li > .sub2 > li {
+    width: 130px;
+} */
+header .left nav .gnb > li > .sub > li > a,
+.sub2 li {margin-bottom: 20px;}
+header .left nav .gnb > li > .sub > li > a {
     display: block;
     font-weight: 700;
+    color: #fff;
 }
-header .left nav > ul > li > .sub > li > .sub2 {}
-header .left nav > ul > li > .sub > li > .sub2 li {
-    background-color: beige;
+/* header .left nav .gnb > li > .sub2:hover, */
+header .left nav .gnb > li > .sub > li:hover {
+    background-color: rgba(255,255,255,0.2);
 }
-header .left nav > ul > li > .sub > li > .sub2 li a {}
-header .left nav > ul > li > .sub > li > .sub2 li a:last-child {margin-bottom: 0;}
+header .left nav .gnb > li > .sub > li:hover > a {
+    color: #FAFF00;
+}
+header .left nav .gnb > li > .sub > li > .sub2 {}
+header .left nav .gnb > li > .sub > li > .sub2 li {}
+.sub2 li a {color: #fff;}
+.sub2 li a:hover {
+    border-bottom: 1px solid #fff;
+}
+.sub2 li a:last-child {margin-bottom: 0;}
 header .lnb {
     display: flex;
     align-items: center;
@@ -95,17 +122,57 @@ header .lnb a:nth-child(2) {
     margin-right: 20px;
     width: 23px; height: 23px;
 }
-header .lnb .search_wrap > button {}
+header .lnb .search_wrap > button {background: none;}
 header .lnb .search_wrap > button img {width: 100%;}
-header .lnb .search_wrap .open_search {}
-header .lnb .search_wrap .open_search #search_close {}
-header .lnb .search_wrap .open_search #search_close img {}
+header .lnb .search_wrap .open_search {
+    background: rgba(0,0,0,0.7);
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 321px;
+}
+header .lnb .search_wrap .open_search .container {
+    width: 1080px;
+    margin: 0 auto;
+}
+header .lnb .search_wrap .open_search #search_close {
+    position: absolute;
+    top: 45px;
+    right: 45px;
+    width: 30px; height: 30px;
+    background: none;
+}
+header .lnb .search_wrap .open_search #search_close img {width: 100%;}
 header .lnb .search_wrap .open_search form {}
-header .lnb .search_wrap .open_search form fieldset {}
-header .lnb .search_wrap .open_search form fieldset #search {}
-header .lnb .search_wrap .open_search form fieldset #search {}
-header .lnb .search_wrap .open_search form fieldset #search_btn {}
-header .lnb .search_wrap .open_search form fieldset #search_btn img {}
+header .lnb .search_wrap .open_search form fieldset {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    align-items: center;
+}
+header .lnb .search_wrap .open_search form fieldset #search {
+    background: none;
+    width: 450px;
+    height: 55px;
+    padding: 0 10px;
+    border-bottom: 1px solid #fff;
+    margin-right: 10px;
+    color: #fff;
+    font-size: 1.333rem;
+}
+header .lnb .search_wrap .open_search form fieldset #search::placeholder {
+    color: #fff;
+    font-size: 1.333rem;
+}
+header .lnb .search_wrap .open_search form fieldset #search_btn {
+    background: none;
+    width: 40px; height: 40px;
+}
+header .lnb .search_wrap .open_search form fieldset #search_btn img {width: 100%;}
 header .lnb a {}
 header .lnb a:last-child {width: 25px; height: 25px;}
 header .lnb a img {width: 100%;}
