--- a/styles/product.css
+++ b/styles/product.css
@@ -1,3 +1,11 @@
+#pop_up {
+    width: 45px;
+    height: 45px;
+    position: relative;
+    z-index: 900;
+}
+#pop_up a {}
+#pop_up a img {}
 main {
     width: 1080px;
     margin: 0 auto;
