--- a/styles/detail.css
+++ b/styles/detail.css
@@ -12,7 +12,7 @@ main .product_title {
     display: flex;
     justify-content: space-between;
     width: 1080px;
-    margin: 100px auto;
+    margin: 181px auto 100px;
 }
 main .product_title .imgCls {
     display: flex;
