--- a/styles/map.css
+++ b/styles/map.css
@@ -19,7 +19,7 @@ html::-o-scrollbar-thumb:hover {background-color: #555;}
 #pop_up a {}
 #pop_up a img {}
 main {
-    margin: 100px auto;
+    margin: 181px auto 100px;
 }
 main h2 {
     font-size: 1.777rem;
