--- a/styles/detail.css
+++ b/styles/detail.css
@@ -7,7 +7,7 @@ body, html {scroll-behavior: smooth;}
 }
 #pop_up a {}
 #pop_up a img {}
-main {}
+main {min-width: 1080px;}
 main .product_title {
     display: flex;
     justify-content: space-between;
