--- a/styles/product.css
+++ b/styles/product.css
@@ -10,6 +10,7 @@ body, html {scroll-behavior: smooth;}
 main {
     width: 1080px;
     margin: 0 auto;
+    min-width: 1080px;
 }
 /* 상품 통합 태그 */
 main #best_slide .swiper-wrapper .swiper-slide,
