--- a/styles/index.css
+++ b/styles/index.css
@@ -71,7 +71,7 @@ main {
 }
 .swiper-pagination {}
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
-/* category-slide title 통합태그 */
+/* slide title 통합태그 */
 .swiper_wrap {}
 .swiper_wrap .title {
     display: flex;
@@ -138,23 +138,32 @@ main {
 /* category-slide */
 .category {}
 .category #category_slide {}
-.category #category_slide .swiper-wrapper {padding: 0 45px;}
+.category #category_slide .swiper-wrapper {
+    width: 930px;
+}
 .category #category_slide .swiper-wrapper .swiper-slide {
-    width: 150px;
+    width: 150px; height: 150px;
     border-radius: 50%;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 150px;
     margin-right: 45px;
     position: relative;
     z-index: 50;
     transition: all 0.5s linear;
     /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 }
+.category #category_slide .swiper-wrapper .slide1 {background-image: url(../images/category1.png);}
+.category #category_slide .swiper-wrapper .slide2 {background-image: url(../images/category2.png);}
+.category #category_slide .swiper-wrapper .slide3 {background-image: url(../images/category3.png);}
+.category #category_slide .swiper-wrapper .slide4 {background-image: url(../images/category4.png);}
+.category #category_slide .swiper-wrapper .slide5 {background-image: url(../images/category5.png);}
+.category #category_slide .swiper-wrapper .slide6 {background-image: url(../images/category6.png);}
+.category #category_slide .swiper-wrapper .slide7 {background-image: url(../images/category7.png);}
 .category #category_slide .swiper-wrapper .swiper-slide:hover::after {
     content: '';
     display: block;
-    width: 100%; height: 100%;
+    width: 150px; height: 150px;
     background-color: rgba(0,0,0,0.5);
     background-size: cover;
     border-radius: 50%;
@@ -164,7 +173,7 @@ main {
     left: 50%;
     transform: translateX(-50%);
 }
-.category #category_slide .swiper-wrapper .swiper-slide img {width: 100%;}
+.category #category_slide .swiper-wrapper .swiper-slide img {}
 .category #category_slide .swiper-wrapper .swiper-slide span {
     display: none;
     transition: all 0.5s linear;
