--- a/styles/map.css
+++ b/styles/map.css
@@ -80,9 +80,15 @@ main .store .store_select a .txt span {
 }
 main .store .store_select a p {}
 main .store .store_select a p button {
-    background: none;
+    width: 20px; height: 20px;
+    background: url(../images/icon/ico_storeP_off.png) no-repeat center;
+    background-size: cover;
+    transition: all 0.3s linear;
+    text-indent: -9999px;
 }
-main .store .store_select a p button img {}
+main .store .store_select a p .storeP_on {
+    background: url(../images/icon/ico_storeP_on.png) no-repeat center;
+}
 main .map_wrap {
     position: relative;
     width: calc(100% - 400px); height: 700px;
